--- a/week3/Data wrangling.ipynb
+++ b/week3/Data wrangling.ipynb
@@ -44,6 +44,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "loose-henry",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "A useful reference is Jacqueline Kazil and Katharine Jarmul. 2016. <em>Data Wrangling With Python</em>, O'Reilly Media. It covers many of the topics we'll cover here, plus more such as structured data cleaning. <a href=\"https://ucla.on.worldcat.org/oclc/937392429\">The UCLA library has an ebook.</a>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "certified-increase",
    "metadata": {},
    "source": [
