Added topic modeling notebook

--- a/weeks5-6/a. NLP Part 1.ipynb
+++ b/weeks5-6/a. NLP Part 1.ipynb
@@ -885,6 +885,7 @@
    "source": [
     "# nltk is a mammoth library, and has lots of submodules\n",
     "# we'll use the tokenize and stopwords for now\n",
+    "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "\n",
