Updated ML notebooks with spatial clustering

--- a/weeks7-8/a_Classification.ipynb
+++ b/weeks7-8/a_Classification.ipynb
@@ -20,7 +20,9 @@
     "There are at least three widely used approaches to classification.\n",
     "* Logistic regression. This is often used in a more statistical setting, but is the starting point for much machine learning analysis. \n",
     "* Random forests. We'll focus on this technique.\n",
-    "* Neural networks. Often used for image recognition, this can be a \"black box\" approach to prediction and classification."
+    "* Neural networks. Often used for image recognition, this can be a \"black box\" approach to prediction and classification.\n",
+    "\n",
+    "Important: machine learning is a very large field, and there are entire courses on the theory and applications. Here, we will give a very high-level overview. We'll focus on the big-picture applicability of machine learning techniques, and actually implementing them in Python. We'll skate over the theoretical underpinnings and the details of the various algorithms."
    ]
   },
   {
