--- a/weeks5-6/a. NLP Part 1.ipynb
+++ b/weeks5-6/a. NLP Part 1.ipynb
@@ -1709,7 +1709,7 @@
     }
    ],
    "source": [
-    "eirtext_wordsonly_split = eirtext_wordsonly.split()\n",
+    "eirtext_wordsonly_split = sub(r\"\\s+\", \" \", pdftext)\n",
     "eirtext_wordsonly_split"
    ]
   },
