--- a/weeks7-8/a_Classification.ipynb
+++ b/weeks7-8/a_Classification.ipynb
@@ -3121,7 +3121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "based-lighting",
+   "id": "equipped-vehicle",
    "metadata": {},
    "source": [
     "strategies to avoid where parcels overlap: \n",
@@ -3134,7 +3134,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "incorporate-delta",
+   "id": "exotic-gazette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3145,7 +3145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-sheffield",
+   "id": "finite-marble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3171,298 +3171,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "id": "9209c445",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>usetype__Commercial</th>\n",
-       "      <th>usetype__Government</th>\n",
-       "      <th>usetype__Industrial</th>\n",
-       "      <th>usetype__Institutional</th>\n",
-       "      <th>usetype__Irrigated Farm</th>\n",
-       "      <th>usetype__Miscellaneous</th>\n",
-       "      <th>usetype__Recreational</th>\n",
-       "      <th>usetype__Residential</th>\n",
-       "      <th>YearBuilt1</th>\n",
-       "      <th>Units1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>usedesc__Three Units (Any Combination)</th>\n",
-       "      <th>usedesc__Timber-Pine</th>\n",
-       "      <th>usedesc__Two Units</th>\n",
-       "      <th>usedesc__Utility Commercial &amp; Mutual: Pumping Plants State Assessed Pr</th>\n",
-       "      <th>usedesc__Vineyards</th>\n",
-       "      <th>usedesc__Warehousing, Distribution, Storage</th>\n",
-       "      <th>usedesc__Waste</th>\n",
-       "      <th>usedesc__Water Recreation</th>\n",
-       "      <th>usedesc__Wholesale &amp; Manufacturing Outlets</th>\n",
-       "      <th>hasADU</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>APN</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2004-001-003</th>\n",
-       "      <td>-0.215099</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.130268</td>\n",
-       "      <td>-0.070096</td>\n",
-       "      <td>-0.004681</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.027795</td>\n",
-       "      <td>0.267437</td>\n",
-       "      <td>0.202211</td>\n",
-       "      <td>-0.099709</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004-001-004</th>\n",
-       "      <td>-0.215099</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.130268</td>\n",
-       "      <td>-0.070096</td>\n",
-       "      <td>-0.004681</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.027795</td>\n",
-       "      <td>0.267437</td>\n",
-       "      <td>0.202211</td>\n",
-       "      <td>-0.099709</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004-001-005</th>\n",
-       "      <td>-0.215099</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.130268</td>\n",
-       "      <td>-0.070096</td>\n",
-       "      <td>-0.004681</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.027795</td>\n",
-       "      <td>0.267437</td>\n",
-       "      <td>0.202211</td>\n",
-       "      <td>-0.099709</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004-001-008</th>\n",
-       "      <td>-0.215099</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.130268</td>\n",
-       "      <td>-0.070096</td>\n",
-       "      <td>-0.004681</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.027795</td>\n",
-       "      <td>0.267437</td>\n",
-       "      <td>0.235640</td>\n",
-       "      <td>-0.099709</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004-001-009</th>\n",
-       "      <td>-0.215099</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.130268</td>\n",
-       "      <td>-0.070096</td>\n",
-       "      <td>-0.004681</td>\n",
-       "      <td>-0.007444</td>\n",
-       "      <td>-0.027795</td>\n",
-       "      <td>0.267437</td>\n",
-       "      <td>0.235640</td>\n",
-       "      <td>-0.099709</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 89 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              usetype__Commercial  usetype__Government  usetype__Industrial  \\\n",
-       "APN                                                                           \n",
-       "2004-001-003            -0.215099            -0.007444            -0.130268   \n",
-       "2004-001-004            -0.215099            -0.007444            -0.130268   \n",
-       "2004-001-005            -0.215099            -0.007444            -0.130268   \n",
-       "2004-001-008            -0.215099            -0.007444            -0.130268   \n",
-       "2004-001-009            -0.215099            -0.007444            -0.130268   \n",
-       "\n",
-       "              usetype__Institutional  usetype__Irrigated Farm  \\\n",
-       "APN                                                             \n",
-       "2004-001-003               -0.070096                -0.004681   \n",
-       "2004-001-004               -0.070096                -0.004681   \n",
-       "2004-001-005               -0.070096                -0.004681   \n",
-       "2004-001-008               -0.070096                -0.004681   \n",
-       "2004-001-009               -0.070096                -0.004681   \n",
-       "\n",
-       "              usetype__Miscellaneous  usetype__Recreational  \\\n",
-       "APN                                                           \n",
-       "2004-001-003               -0.007444              -0.027795   \n",
-       "2004-001-004               -0.007444              -0.027795   \n",
-       "2004-001-005               -0.007444              -0.027795   \n",
-       "2004-001-008               -0.007444              -0.027795   \n",
-       "2004-001-009               -0.007444              -0.027795   \n",
-       "\n",
-       "              usetype__Residential  YearBuilt1    Units1  ...  \\\n",
-       "APN                                                       ...   \n",
-       "2004-001-003              0.267437    0.202211 -0.099709  ...   \n",
-       "2004-001-004              0.267437    0.202211 -0.099709  ...   \n",
-       "2004-001-005              0.267437    0.202211 -0.099709  ...   \n",
-       "2004-001-008              0.267437    0.235640 -0.099709  ...   \n",
-       "2004-001-009              0.267437    0.235640 -0.099709  ...   \n",
-       "\n",
-       "              usedesc__Three Units (Any Combination)  usedesc__Timber-Pine  \\\n",
-       "APN                                                                          \n",
-       "2004-001-003                                       0                     0   \n",
-       "2004-001-004                                       0                     0   \n",
-       "2004-001-005                                       0                     0   \n",
-       "2004-001-008                                       0                     0   \n",
-       "2004-001-009                                       0                     0   \n",
-       "\n",
-       "              usedesc__Two Units  \\\n",
-       "APN                                \n",
-       "2004-001-003                   0   \n",
-       "2004-001-004                   0   \n",
-       "2004-001-005                   0   \n",
-       "2004-001-008                   0   \n",
-       "2004-001-009                   0   \n",
-       "\n",
-       "              usedesc__Utility Commercial & Mutual: Pumping Plants State Assessed Pr  \\\n",
-       "APN                                                                                    \n",
-       "2004-001-003                                                  0                        \n",
-       "2004-001-004                                                  0                        \n",
-       "2004-001-005                                                  0                        \n",
-       "2004-001-008                                                  0                        \n",
-       "2004-001-009                                                  0                        \n",
-       "\n",
-       "              usedesc__Vineyards  usedesc__Warehousing, Distribution, Storage  \\\n",
-       "APN                                                                             \n",
-       "2004-001-003                   0                                            0   \n",
-       "2004-001-004                   0                                            0   \n",
-       "2004-001-005                   0                                            0   \n",
-       "2004-001-008                   0                                            0   \n",
-       "2004-001-009                   0                                            0   \n",
-       "\n",
-       "              usedesc__Waste  usedesc__Water Recreation  \\\n",
-       "APN                                                       \n",
-       "2004-001-003               0                          0   \n",
-       "2004-001-004               0                          0   \n",
-       "2004-001-005               0                          0   \n",
-       "2004-001-008               0                          0   \n",
-       "2004-001-009               0                          0   \n",
-       "\n",
-       "              usedesc__Wholesale & Manufacturing Outlets  hasADU  \n",
-       "APN                                                               \n",
-       "2004-001-003                                           0       0  \n",
-       "2004-001-004                                           0       0  \n",
-       "2004-001-005                                           0       0  \n",
-       "2004-001-008                                           0       0  \n",
-       "2004-001-009                                           0       0  \n",
-       "\n",
-       "[5 rows x 89 columns]"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_to_fit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-69220078ef19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdummyCols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_to_fit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'usetype_'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'usedesc_'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'hasADU'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0motherCols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_to_fit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdummyCols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_to_fit' is not defined"
+     ]
     }
    ],
    "source": [
     "# see https://scikit-learn.org/stable/modules/preprocessing.html for standardization\n",
     "from sklearn import preprocessing\n",
     "\n",
-    "dummyCols = [col for col in df_to_fit.columns if col.startswith('_usetype') or col.startswith('usedesc_') or col=='hasADU']\n",
+    "dummyCols = [col for col in df_to_fit.columns if col.startswith('usetype_') or col.startswith('usedesc_') or col=='hasADU']\n",
     "otherCols = [col for col in df_to_fit.columns if col not in dummyCols]\n",
     "\n",
     "scaler = preprocessing.StandardScaler().fit(df_to_fit[otherCols])\n",
